--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.8",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^9.3.0",
     "@react-native-picker/picker": "^2.4.3",
@@ -29,6 +30,7 @@
     "react-native-share": "^7.8.0",
     "react-native-side-menu": "^1.1.3",
     "react-native-static-server": "^0.5.0",
+    "react-native-svg": "^12.4.4",
     "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.23.0",
